Break words for a container to fix issues with width on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -902,3 +902,8 @@ pre code {
   position: relative;
   top: 1px;
 }
+
+/* Container */
+.container {
+  word-break: break-word;
+}
